--- a/index.html
+++ b/index.html
@@ -4,14 +4,108 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Free Web tutorials">
-	<meta name="keywords" content="HTML, CSS, JavaScript">
-	<meta name="author" content="John Doe">
-	<title>Document</title>
+	<meta name="description" content="A website on how to shape up">
+	<meta name="keywords" content="shape up, work out, diet, cardio, strength, stress">
+	<meta name="author" content="Michael Roberts">
+
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
+
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
+	<title>Shape Up!</title>
 </head>
 
 <body>
+	<header>
+		<a href="index.html"><img src="images/shape_up_logo.png" alt="Shape Up logo image" title="Click here to return to the home page"></a>
+		<div>
+			<h2>Shape Up!</h2>
+			<h3>Find the best fit for you</h3>
+		</div>
+	</header>
 
+	<!-- Navigation bar -->
+	<nav id="nav_menu">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="cardio/index.html">Cardio</a></li>
+			<li><a href="diet/index.html">Diet</a>
+				<ul>
+					<li><a href="diet/bmi.html">BMI</a></li>
+					<li><a href="diet/calories.html">Calories</a></li>
+					<li><a href="diet/meals.html">Meals</a></li>
+				</ul>
+			</li>
+			<li><a href="strength/index.html">Strength</a></li>
+			<li><a href="stress/index.html">Stress</a>
+				<ul>
+					<li><a href="stress/meditate.html">Meditate</a></li>
+					<li><a href="stress/tips.html">Tips</a></li>
+					<li><a href="stress/vipassana.html">Vipassana</a></li>
+				</ul>
+			</li>
+
+		</ul>
+	</nav>
+
+
+	<main>
+		<aside>
+			<nav id="nav_list">
+				<h2>Additional resources</h2>
+				<ul>
+					<li><a href="https://paahjournal.com/" target="_blank">Physical activity and health</a></li>
+					<li><a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/stretching/art-20546848"
+							target="_blank">Stretching exercises</a></li>
+					<li><a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/strength-training/art-20046670"
+							target="_blank">Strength training</a></li>
+					<li><a href="https://my.clevelandclinic.org/health/articles/24754-cardiovascular-endurance"
+							target="_blank">Cardiovascular training</a></li>
+					<li><a href="https://wellnessclub.aloyoga.com/?utm_medium=cpc&utm_source=google&utm_campaign=PPC_GOOG_NonBrand_US_Search_Prospecting_WellnessClub&utm_term=yoga%20class%20online&utm_content=194243617670&utm_id=23383820137&gad_source=1&gad_campaignid=23383820137&gbraid=0AAAAADrf1wh7bmSQRJbZpcD6uixBwt4Ys&gclid=Cj0KCQiA4eHLBhCzARIsAJ2NZoJVnk4akHhrWWHg3u4Vq5fHuNff8JLlfZ-884DSok8v0CzUyNebHJwaAiMOEALw_wcB"
+							target="_blank">Yoga Exercises</a></li>
+				</ul>
+			</nav>
+		</aside>
+		<section>
+			<h1>Get Ready To Shape Up!</h1>
+			<p>How many times have you started a new workout routine or diet? And how many times has it failed to give
+				you the results you want? Now, with the help of this site, you can learn about the exercises and diet
+				that work best for you. We offer personalized programs as well as access to several health and dieting
+				tools. So don't wait! Get started looking and feeling better today.</p>
+			<p>As fitness expert Amanda Russell said:</p>
+			<blockquote>Fitness is about so much more than exercise. It&apos;s a catalyst for positive change, and it
+				affects every aspect of your life.</blockquote>
+
+			<h2>What We Offer:</h2>
+			<h4><a href="strength/index.html">Build strong muscles</a></h4>
+			<p>Tired of being tired? Strength training can help you manage or lose weight and increase your metabolism
+				to help you burn more calories. It can also increase bone density and reduce the risk of osteoporosis.
+			</p>
+
+			<h4><a href="cardio/index.html">Get your heart rate up</a></h4>
+			<p>Want to lose weight? Cardiovascular exercise burns calories and improves overall health. It can reduce
+				belly fat, promote brain growth, prevent stress, and help you focus.</p>
+
+			<h4><a href="stress/index.html">Relax</a></h4>
+			<p>Stressed out? Stress can weaken the immune system and cause high blood pressure, fatigue, depression,
+				anxiety, and even heart disease. Learn ways to manage and reduce stress.</p>
+
+			<h4><a href="diet/index.html">Eat what's right for you</a></h4>
+			<p>Are you really what you eat? Lose weight, gain weight, or just feel great! Maintaining a healthy diet is
+				probably the most important thing you can do to promote overall health.</p>
+		</section>
+
+	</main>
+	<footer>
+		<p>&copy; <span id="copyrightyear"></span> Shape Up!</p>
+
+	</footer>
 </body>
 
 </html>
+
+<script>
+	const d = new Date();
+	document.getElementById('copyrightyear').innerHTML = d.getFullYear();
+</script>
